[metadata]
name = quantum_simulator
version = 0.0.1
author = João Gabriel Segato Kruse
author_email = soyjog@gmail.com
description = Quantum computing simulator for simple experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkruse27/QuantumSimulator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
